# cs739-p2-replicated-database

./: .gitmodules  CMakeLists.txt  CMakeLists_app.cmake  CMakeLists_benchmark.cmake  CMakeLists_interface.cmake  CMakeLists_node.cmake  CMakeLists_user.cmake  README.md  vcpkg.json
config/: 10_node_cluster.ini  50_node_cluster.ini  5_node_cluster.ini  node.ini
documentation/: paxos-consensus.md
results/benchmark_set_leader/: chart.xlsx
script/: build.sh  provision_local.sh  run.sh
src/: CMakeLists-interface.txt  CMakeLists-node.txt  CMakeLists-user.txt  CMakeLists.txt  Utility.cpp  app.cc  client.cpp  client.h  consensusInterface.proto  consensus_interface.proto  database_interface.proto  declaration.h  entrypoint.cc  grpcClient.cpp  grpcClient.h  grpcInterface.proto  grpcServer.cpp  grpcServer.h  include.h  rpc.cc  server.cpp  server.h  stateMachine.cpp  utility.cc
src/interface/: consensusInterface.proto  databaseInterface.proto
src/node/: Consensus.cpp  Consensus.h  Database.cpp  Database.h  RPCWrapperCall.cpp  RPCWrapperCall.h  config.cc  config.h  entrypoint.cpp  entrypoint.h
src/user/: ClientRPC.cpp  ClientRPC.h  entrypoint.cpp  entrypoint.h
test/: benchmark.cc
